# oshit

./: .codespellrc  .pre-commit-config.yaml  .pylintrc  ChangeLog.md  ChanheLog.md  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: code-checks.yaml
oshit/: __init__.py  __main__.py
oshit/app/: __init__.py  commands.py  oshit.py
oshit/app/data/: __init__.py  config.py  locations.py
oshit/app/screens/: comments.py  config.py  help.py  links.py  main.py  user.py
oshit/app/widgets/: __init__.py  article_text.py  comment_card.py  hacker_news.py  items.py
oshit/hn/: __init__.py  client.py  text.py  user.py
oshit/hn/item/: __init__.py  article.py  base.py  comment.py  link.py  loader.py  poll.py  unknown.py
src/oshit/: __init__.py
src/oshit/app/: oshit.py
src/oshit/app/screens/: __init__.py  comments.py  config.py  help.py  links.py  main.py  search.py
src/oshit/app/widgets/: article_text.py  comment_card.py  items.py
src/oshit/hn/: __init__.py  client.py  text.py
src/oshit/hn/item/: article.py  comment.py  link.py  loader.py
